--- a/kitafront/vercel.json
+++ b/kitafront/vercel.json
@@ -1,8 +1,21 @@
 {
-  "rewrites": [
+  "functions": {
+    "src/entry-server.tsx": {
+      "runtime": "nodejs18.x"
+    }
+  },
+  "routes": [
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "src": "/_vercel/insights/(.*)",
+      "dest": "/_vercel/insights/$1"
+    },
+    {
+      "src": "/assets/(.*)",
+      "dest": "/assets/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/"
     }
   ]
 }
