--- a/kitafront/vercel.json
+++ b/kitafront/vercel.json
@@ -1,21 +1,7 @@
 {
-  "functions": {
-    "src/entry-server.tsx": {
-      "runtime": "nodejs18.x"
-    }
-  },
-  "routes": [
-    {
-      "src": "/_vercel/insights/(.*)",
-      "dest": "/_vercel/insights/$1"
-    },
-    {
-      "src": "/assets/(.*)",
-      "dest": "/assets/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/"
-    }
+  "version": 2,
+  "rewrites": [
+    { "source": "/assets/(.*)", "destination": "/assets/$1" },
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
