--- a/kitafront/package.json
+++ b/kitafront/package.json
@@ -20,7 +20,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwindcss": "^4.1.18",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "nitro": "npm:nitro-nightly@latest"
   },
   "devDependencies": {
     "@tanstack/devtools-vite": "^0.3.11",
